Fix CSS for table caption alignment, refs #9381

--- a/plugins/arDominionPlugin/css/less/forms.less
+++ b/plugins/arDominionPlugin/css/less/forms.less
@@ -152,7 +152,7 @@ fieldset {
     background-color: @white;
     caption {
       width: 33%;
-      margin-left: 12px;
+      margin-left: 0px;
       border: 1px solid @borderOutlineColor;
       background-color: @white;
       border-bottom: 0;
